# Kopia

./: .travis.yml  Kopia.cabal  README.md
src/: Main.hs
src/Kopia/: Bridge.hs  Command.hs  Filesystem.hs  Interpreter.hs  Order.hs  Parser.hs  Snapshot.hs
src/Kopia/Model/: Bridge.hs  Command.hs  Order.hs  Snapshot.hs
test/Kopia/: FilesystemSpec.hs  InterpreterSpec.hs  ParserSpec.hs  SnapshotSpec.hs
