name:                Kopia
version:             0.1.0.0
description:         A simple backup system  
license-file:        LICENSE
author:              Jefffrey
maintainer:          notjefff@gmail.com
build-type:          Simple
cabal-version:       >= 1.8

executable Kopia
    main-is:
        Main.hs      
    hs-source-dirs:
        src
    build-depends:
        base,
        directory,
        text,
        cmdargs,
        time,
        old-locale,
        filepath
    extensions:
        DeriveDataTypeable

Test-Suite test-solidran
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test, src
    main-is:                Spec.hs
    build-depends:
        base,
        directory,
        text,
        cmdargs,
        time,
        old-locale,
        filepath,
        hspec
    default-language:       Haskell2010
    extensions:
        DeriveDataTypeable
